summary: NetApp le ofrece funciones nuevas y mejoradas en cada versión de los servicios Keystone STaaS. 
---
= Novedades en Keystone STaaS
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Obtenga información sobre las últimas características y mejoras en los servicios Keystone STaaS.



== 08 de diciembre de 2025

Nuevas mejoras en el panel de Keystone en la NetApp Console:



=== Etiqueta de capacidad de ráfaga acumulada renombrada

La etiqueta *Capacidad de ráfaga acumulada* pasa a llamarse *Ráfaga acumulada*.



== 24 de noviembre de 2025

Nuevas mejoras en el panel de Keystone en la NetApp Console:



=== Identificación de seguimiento para suscripciones con brecha de cobertura

En el cuadro de notificación *Complete su cobertura* en *Monitoreo > Monitores de alerta*, cada suscripción ahora muestra su ID de seguimiento junto al número de suscripción.



== 10 de noviembre de 2025

Nuevas mejoras en el panel de Keystone en la NetApp Console:



=== Complete su casilla de notificación de cobertura

La pestaña *Monitores de alertas* en la página *Monitoreo* incluye un cuadro de notificación *Complete su cobertura* que aparece cuando existen brechas de cobertura. Esta casilla muestra las suscripciones a las que les falta capacidad o que están próximas a vencer, y los monitores que no tienen suscripción. Puede solucionar estos problemas añadiendo suscripciones a los monitores existentes, creando nuevos monitores o eliminando los monitores que no se utilicen. Para obtener más información, consulte link:https://docs.netapp.com/us-en/keystone-staas/integrations/monitoring-alert-monitors.html#manage-coverage-gaps["Gestionar las brechas de cobertura para los monitores de alertas"].



== 13 de octubre de 2025

Nuevas mejoras en el panel de Keystone en la NetApp Console:



=== Columna de anulación de la política de QoS en la pestaña Activos
