@@ -2638,4 +2638,11 @@
   <block id="1c0706b323b25df07171d935dadca63d" category="sidebar">Obtenga más información sobre Keystone STaaS SLO</block>
   <block id="4996475aff4a957b37439e45da70e7da" category="sidebar">Entender la facturación</block>
   <block id="d7343c0d20dd2babfa5f38e0b87a6939" category="sidebar">Facturación para configuraciones de volumen específicas</block>
+  <block id="0fa78e8d7c7b076da1f9e1d3fa517845" category="doc">Modificar suscripción no disponible</block>
+  <block id="6c8dd41ea59e163d8fa923e1f93882e6" category="paragraph">Actualizaciones en el panel de Keystone en la NetApp Console:</block>
+  <block id="ccaf34b2cf2472652ed113639a7f687c" category="paragraph">La opción para modificar la capacidad comprometida para las suscripciones de Keystone no está disponible actualmente. Esta funcionalidad se reintroducirá en una versión futura.</block>
+  <block id="252561ea020b2dfb8598526a78a88036" category="inline-link-macro">Roles de acceso de Keystone en la NetApp Console</block>
+  <block id="99a171058669ac189901e0c53c44ed13" category="admonition">Debe estar asignado al rol de *administrador de Keystone * para crear y administrar monitores de alerta. Para obtener más información, consulte <block ref="c1ba7ab85116b0653b4bddd0a4c0ce29" category="inline-link-macro-rx"></block>.</block>
+  <block id="53a22728b83fc16fec4e96baf9b85af7" category="admonition">Para editar alertas se requiere el rol de *administrador de Keystone *. El rol de *visor de Keystone * solo puede ver detalles de alertas. Para obtener más información, consulte <block ref="c1ba7ab85116b0653b4bddd0a4c0ce29" category="inline-link-macro-rx"></block>.</block>
+  <block id="194a29c3464a05de3c32434145c0b5d6" category="section-title">19 de enero de 2026</block>
 </blocks>
